# 2025SummerWalab

./: .env.sample  .gitignore  .gitmessage  cookies.txt  deploy.sh  docker-compose.deploy.yml  docker-compose.scale.yml  docker-compose.yml  readme.md
micro-service-server/: .dockerignore  .gitignore  Dockerfile  alembic.ini  auto_migrate.sh  entrypoint.sh  main.py  pyproject.toml  readme.md  reproduce_issue.py  requirements.txt  reset_db.py  test_polling.py  verify_models.py
micro-service-server/app/: main.py
micro-service-server/app/api/: api_router.py  deps.py
micro-service-server/app/auth/: exceptions.py  repository.py  routes.py  schemas.py  service.py
micro-service-server/app/code_autosave/: listener.py  models.py  repository.py  routes.py  schemas.py  service.py
micro-service-server/app/common/: base_entity.py  models.py  page.py  routes.py
micro-service-server/app/config/: database.py  redis.py  settings.py
micro-service-server/app/contest/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
micro-service-server/app/contest_user/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
micro-service-server/app/contribute/: routes.py
micro-service-server/app/core/: cors.py  database.py  logger.py  redis.py  settings.py
micro-service-server/app/exception/: codes.py  handlers.py
micro-service-server/app/execution/: exceptions.py  models.py  routes.py  scheduler.py  schemas.py  service.py
micro-service-server/app/export_result/: routes.py  (+3 more)
micro-service-server/migrations/: env.py  migration_helpers.py
(+714 files in other folders)
