[project]
name = "micro-service-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.1",
    "asyncpg>=0.28.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=4.5.0,<5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
]
